tests passing but ugly