@@ -2,5 +2,5 @@
 
 cd /app
 
-java -server -Xms64m -Xmx64m -jar app.jar "${port}" "${dbhost}"
+java --add-opens=java.base/java.nio=ALL-UNNAMED --enable-native-access=ALL-UNNAMED -server -Xms64m -Xmx64m -jar app.jar "${port}" "${dbhost}"
 
